--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
+  "packageManager": "pnpm@9.12.0",
   "prettier": {
     "printWidth": 130,
     "tabWidth": 4,
