--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:vercel": "rm -rf .next && vercel build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
