chore(docs): improve sections and add new sections in `deploy/page.mdx`
- Format the content of the paragraphs
- Update `Code` component to accept `children` prop
- Add `Login` section
- Add `Pull Configuration From Vercel Online` section
- Add `Unstable` section
- Add `Github Actions` section
- Remove unnecessary code

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
           "*.json",
           "*.yml",
           "*.yaml",
-          "*.md"
+          "*.md",
+          "*.mdx"
         ],
         "options": {
           "tabWidth": 2
