chore(docs): add deploy guide for Next.js on vercel in docs/deploy (#3)
* chore(docs): add deploy guide for Next.js on vercel in `docs/deploy`

* chore(docs): add `deploy` page sections includes

- Install `vercel` as a global dependency
- Link your project
- Build your project

* chore(docs): improve sections and add new sections in `deploy/page.mdx`

- Format the content of the paragraphs
- Update `Code` component to accept `children` prop
- Add `Login` section
- Add `Pull Configuration From Vercel Online` section
- Add `Unstable` section
- Add `Github Actions` section
- Remove unnecessary code

* fix: resolve error in `Code` component and remove white spaces

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:vercel": "rm -rf .next && vercel build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -46,7 +47,8 @@
           "*.json",
           "*.yml",
           "*.yaml",
-          "*.md"
+          "*.md",
+          "*.mdx"
         ],
         "options": {
           "tabWidth": 2
